<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:orientation="horizontal"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@null"
                android:onClick="onSearchClicked"
                android:src="@android:drawable/ic_menu_search" />

            <EditText
                android:id="@+id/searchEditTextBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="0.08">

            <LinearLayout
                android:id="@+id/linearLayoutScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/purple"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_angry" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/beige"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_scared" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/yellow"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_happy" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_green"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_birthday" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue_sky"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_love" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_trends" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_200"
                    android:onClick="onClickButtonWithTag"
                    android:text="@string/tag_surprised" />

            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.78">

            <LinearLayout
                android:id="@+id/linearGifs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>